--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Study App</string>
+    <string name="deckTitle">Title of deck, ex. \"Capital Cities\"</string>
+    <string name="deckSubject">Subject of deck, ex. \"Geography\".</string>
+    <string name="deckCreator">Create a New Deck of Memory Cards.</string>
 </resources>
