--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="addQuestion">Add a question</string>
     <string name="addAnswer">Write the answer</string>
     <string name="createCard">CREATE CARD</string>
-
     <string name="StudyApp">BeautifulButton</string>
     <string name="back">BACK</string>
     <string name="save_note">SAVE NOTE</string>
@@ -16,5 +15,17 @@
     <string name="create_new_deck">CREATE NEW DECK</string>
     <string name="choose_your_deck">Choose your deck</string>
     <string name="delete_decks_by_long_pressing_on_desired_deck">Delete decks by long pressing on desired deck</string>
-
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_register">Register</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="username">Username</string>
+    <string name="verify_password">Verify password</string>
+    <string name="create_account">Create account</string>
 </resources>
