--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="prompt_username">Username</string>
+    <string name="my_page">MY PAGE</string>
 </resources>
